categories - stock - extras managament + pickup/return place translation

--- a/views/booking_items_management.erb
+++ b/views/booking_items_management.erb
@@ -288,7 +288,7 @@
           <div class="col-sm-12 col-md-10 col-md-offset-1">
             <div class="block ">
               <div class="block-header bg-gray-lighter">
-                <h3 class="block-title">Referencia</h3>
+                <h3 class="block-title">Otros datos</h3>
               </div>
               <div class="block-content block-content-narrow">
                   <form name="element" class="form-horizontal" method="POST">
