--- a/views/console_booking_configuration_templates.erb
+++ b/views/console_booking_configuration_templates.erb
@@ -1,9 +1,9 @@
 <div class="top-navigation-bar">
   <h2 class="entity-title"><%=t.booking_configuration_templates.title%></h2>
 </div>
-<div class="admin_content_wrapper">
+<div class="admin_content_wrapper"  style="background-color: #f5f5f5; margin: 0">
 
-<ul id="content_tabs" class="no-border no-background"class="no-border no-background">  
+<ul id="content_tabs" class="no-border no-background"class="no-border no-background" style="display:none">
   <% if booking_renting %>          
     <li class="no-border no-background top-space" style="border:none;background:none">
       <a name="renting_tab" href="#renting_tab"><%=t.booking_settings.form.rent_group%></a>
@@ -14,10 +14,96 @@
       <a name="activities_tab" href="#activities_tab"><%=t.booking_settings.form.activities_group%></a>
     </li>
   <% end %>
-</ul>          
+</ul>
 
-<div id="content">
-  <% if booking_renting %>
+  <div data-alerts="alerts" data-titles="{'success':'<%=t.entitymanagement.success%>','warning':'<%=t.entitymanagement.warning%>','error':'<%=t.entitymanagement.error%>'}" data-fade="10000"></div>
+
+
+  <div id="content">
+
+    <br>
+
+    <div class="row">
+      <div class="col-sm-12 col-md-10 col-md-offset-1">
+        <div class="block ">
+          <div class="block-header bg-gray-lighter">
+            <h3 class="block-title"><%=t.booking_configuration_templates.email_customer_request_received%></h3>
+          </div>
+          <div class="block-content block-content-narrow">
+            <form name="templates" action="/api/templates" method="PUT"
+                  data-remote="ajax" data-remote-method="PUT" class="all-space">
+              <%= render_template_editor 'booking_customer_req_notification','','' %>
+              <div class="formrow-botonera">
+                <input type="submit" value="<%=t.entitymanagement.update%>"
+                       class="button blue-button">
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12 col-md-10 col-md-offset-1">
+        <div class="block ">
+          <div class="block-header bg-gray-lighter">
+            <h3 class="block-title"><%=t.booking_configuration_templates.email_customer_reservation_confirmed%></h3>
+          </div>
+          <div class="block-content block-content-narrow">
+            <form name="templates" action="/api/templates" method="PUT"
+                  data-remote="ajax" data-remote-method="PUT" class="all-space">
+              <%= render_template_editor 'booking_customer_notification','','' %>
+              <div class="formrow-botonera">
+                <input type="submit" value="<%=t.entitymanagement.update%>"
+                       class="button blue-button">
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12 col-md-10 col-md-offset-1">
+        <div class="block ">
+          <div class="block-header bg-gray-lighter">
+            <h3 class="block-title"><%=t.booking_configuration_templates.email_customer_payment_request_received%></h3>
+          </div>
+          <div class="block-content block-content-narrow">
+            <form name="templates" action="/api/templates" method="PUT"
+                  data-remote="ajax" data-remote-method="PUT" class="all-space">
+              <%= render_template_editor 'booking_customer_req_pay_now_notification','','' %>
+              <div class="formrow-botonera">
+                <input type="submit" value="<%=t.entitymanagement.update%>"
+                       class="button blue-button">
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12 col-md-10 col-md-offset-1">
+        <div class="block ">
+          <div class="block-header bg-gray-lighter">
+            <h3 class="block-title"><%=t.booking_configuration_templates.email_customer_payment_enabled%></h3>
+          </div>
+          <div class="block-content block-content-narrow">
+            <form name="templates" action="/api/templates" method="PUT"
+                  data-remote="ajax" data-remote-method="PUT" class="all-space">
+              <%= render_template_editor 'booking_customer_notification_payment_enabled','','' %>
+              <div class="formrow-botonera">
+                <input type="submit" value="<%=t.entitymanagement.update%>"
+                       class="button blue-button">
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <% if booking_renting %>
   <div id="renting_tab" class="top-margin bottom-margin">
     <h3 class="bottom-border-solid"><%=t.booking_configuration_templates.general%></h3>
     <div class="container_12">
