--- a/views/config_booking_payment.erb
+++ b/views/config_booking_payment.erb
@@ -14,18 +14,17 @@
         </div>
         <div class="block-content block-content-narrow">
           <form name="variables" action="/api/variables" method="PUT"
-                data-remote="ajax" data-remote-method="PUT">
+                data-remote="ajax" data-remote-method="PUT" class="form-horizontal">
             <%= render_variable_checkbox_boolean('booking.payment', t.booking_settings.form.payment) %>
             <%= render_variable_input_text('booking.payment_cadence', t.booking_settings.form.payment_cadence, 2, 2) %>
             <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.payment_cadence_description%></p>
-            <h3 class="bottom-border-solid" style="font-size:1.2em"><%=t.booking_settings.form.deposit_payment_group%></h3>
             <%= render_variable_input_text('booking.deposit', t.booking_settings.form.deposit, 2, 2) %>
             <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.deposit_description%></p>
-            <h3 class="bottom-border-solid" style="font-size:1.2em"><%=t.booking_settings.form.total_payment_group%></h3>
             <%= render_variable_checkbox_boolean('booking.allow_total_payment', t.booking_settings.form.allow_total_payment) %>
-            <div class="formrow-botonera  top-separator top-space">
-              <input type="submit" value="<%=t.entitymanagement.update%>"
-                     class="button blue-button">
+            <div class="form-group">
+              <div class="col-xs-12">
+                <button class="button btn btn-sm btn-primary pull-right" type="submit"><i class="fa fa-save push-5-r"></i> <%=t.entitymanagement.update%></button>
+              </div>
             </div>
           </form>
         </div>
@@ -38,23 +37,22 @@
       <div class="col-sm-12 col-md-10 col-md-offset-1">
         <div class="block ">
           <div class="block-header bg-gray-lighter">
-            <h3 class="block-title"><%=t.booking_settings.form.rent_group%></h3>
+            <h3 class="block-title"><%=t.booking_settings.form.activities_group%></h3>
           </div>
           <div class="block-content block-content-narrow">
             <form name="variables" action="/api/svariables" method="PUT"
-                  data-remote="ajax" data-remote-method="PUT">
+                  data-remote="ajax" data-remote-method="PUT" class="form-horizontal">
               <%= render_variable_checkbox_boolean('order.payment', t.booking_settings.form.activities_payment) %>
               <%= render_variable_input_text('order.payment_cadence', t.booking_settings.form.activities_payment_cadence, 2, 2) %>
               <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.activities_payment_cadence_description%></p>
-              <h3><%=t.booking_settings.form.deposit_payment_group%></h3>
               <%= render_variable_checkbox_boolean('order.allow_deposit_payment', t.booking_settings.form.activities_allow_deposit_payment) %>
               <%= render_variable_input_text('order.deposit', t.booking_settings.form.activities_deposit, 2, 2) %>
               <p class="less_contrast_text smaller_text"><%=t.booking_settings.form.deposit_description%></p>
-              <h3><%=t.booking_settings.form.total_payment_group%></h3>
               <%= render_variable_checkbox_boolean('order.allow_total_payment', t.booking_settings.form.activities_allow_total_payment) %>
-              <div class="formrow-botonera  top-separator top-space">
-                <input type="submit" value="<%=t.entitymanagement.update%>"
-                       class="button blue-button">
+              <div class="form-group">
+                <div class="col-xs-12">
+                  <button class="button btn btn-sm btn-primary pull-right" type="submit"><i class="fa fa-save push-5-r"></i> <%=t.entitymanagement.update%></button>
+                </div>
               </div>
             </form>
           </div>
