--- a/views/bookings_management.js.erb
+++ b/views/bookings_management.js.erb
@@ -53,7 +53,7 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
   	
     this.onRenderEntities = function(entities) {
       $('.elements-search').show(); 
-      $('.new-entity-button').hide();
+      $('.new-entity-button').remove();
     }
 
     this.onProcessSearch = function() {
