--- a/views/report_detailed_picked_up_products.erb
+++ b/views/report_detailed_picked_up_products.erb
@@ -10,7 +10,7 @@
   }
 </style>
 <div class="top-navigation-bar">
-  <h2 class="entity-title">Listado detallado de productos entregados</h2>
+  <h2 class="entity-title"><%=t.report_picked_up_products.title%></h2>
   <div class="form-button" style="float: right">
     <a id="print_link" href="/admin/booking/reports/detailed-picked-up-products-csv" target="_blank">Excel</a>
   </div>
