--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -1,4 +1,4 @@
-<%= include('entity-management') %>
+<%= include('entity-management', {:elements_actions => elements_actions}) %>
 
 <!-- Renders the element description -->
 
@@ -10,21 +10,38 @@
   <%= t.booking_management.description %>
 </script>
 
+<!-- Renders the search -->
+<script type="text/tmpl" id="elements_search">
+  <form name="contents_search" id="contents_search" style="overflow:visible" class="form-inline">
+     <div class="form-row">
+       <input type="text" name="search" class="search-entity-input form-control"
+              maxlength="60" size="20" placeholder="<%=t.entitymanagement.search%>"/>
+       <select name="status" class="search-entity-control form-control">
+         <option value="all">Todas</option>
+         <option value="pending"><%=t.booking_console.report_pending_confirmation%>&nbsp;(<%=@pending_confirmation_reservations%>)</option>
+         <option value="in_process"><%=t.booking_console.report_in_progress%>&nbsp;(<%=@transit_today%>)</option>
+         <option value="received">Recibidas&nbsp;(<%=@received_reservations%>)</option>
+         <option value="confirmed">Confirmadas&nbsp;(<%=@confirmed_reservations%>)</option>
+       </select>
+     </div>
+  </form>
+</script>
+
 <!-- Renders the elements container -->
 <script type="text/tmpl" id="elements_container_template">
+
   <table id="elements_table" class="table table-striped">
      <thead class="table-header">
        <tr>
          <th class="table-header-title" scope="col" style="width:80px">#</th>
-         <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.creation_date %></th>
          <th class="table-header-title" scope="col" style="width:150px"><%= t.booking_management.table.customer %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.status %></th>
-         <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.payment_status %></th>
          <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.category %></th>
          <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.date_from %></th>
          <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.date_to %></th>
+         <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.status %></th>
+         <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.payment_status %></th>
+         <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.creation_date %></th>
          <th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.created_by_manager %></th>
-         <!--th class="table-header-title centered_text" scope="col" style="width:100px"><%= t.booking_management.table.notifications %></th-->
          <% if multiple_rental_locations %>
          <th class="table-header-title" scope="col" style="width:120px"><%= t.booking_management.table.rental_location %></th>
          <% end %>
@@ -33,20 +50,6 @@
      <tbody id="elements_tbody" class="table-tbody">             
      </tbody>
   </table>
-  <!--div class="guiblock smaller_text all-space left-margin right-margin">
-    <p><%=t.booking_management.footer.title%>:</p>
-    <div>
-    <span class="more_contrast_text">c1:</span><span class="less_contrast_text"><%=t.booking_management.footer.c1_notification%></span>&nbsp;
-    <span class="more_contrast_text">c2:</span><span class="less_contrast_text"><%=t.booking_management.footer.c2_notification%></span>&nbsp;
-    <span class="more_contrast_text">c3:</span><span class="less_contrast_text"><%=t.booking_management.footer.c3_notification%></span>&nbsp;
-    <span class="more_contrast_text">c4:</span><span class="less_contrast_text"><%=t.booking_management.footer.c4_notification%></span>&nbsp;
-    </div>
-    <div>
-    <span class="more_contrast_text">m:</span><span class="less_contrast_text"><%=t.booking_management.footer.m1_notification%></span>&nbsp;
-    <span class="more_contrast_text">m2:</span><span class="less_contrast_text"><%=t.booking_management.footer.m2_notification%></span>&nbsp;    
-    <span class="more_contrast_text">m2:</span><span class="less_contrast_text"><%=t.booking_management.footer.m3_notification%></span>&nbsp;     
-    </div>
-  </div-->
 </script>
 
 <!-- Renders one element in the elements list view -->
@@ -54,18 +57,7 @@
 <script type="text/tmpl" id="elements_list_template">
     <tr class="table-row element-navigation-detail" rel="<%%= index %>" id="element_row_<%%=index%>">
       <td class="table-cell"><strong class="text-primary"><%%= entity.id %></strong></td>
-      <td class="table-cell centered_text"><%%= self.formatDate(entity.creation_date,'dd.MM.yyyy') %></td>
       <td class="table-cell"><strong><%%= entity.customer_name %> <%%=entity.customer_surname%></strong></td>
-      <td class="table-cell centered_text">
-        <span class="<%%=self.model.entityHooks[0].statusClass(entity)%> element-status">
-          <%%= self.model.entityHooks[0].statusDescription[entity.status] %>
-        </span>
-      </td>
-      <td class="table-cell centered_text">
-         <%% if (entity.payment_status == 'deposit') { %><span class="label label-info smaller_text">Depósito</span> <%% } %>
-         <%% if (entity.payment_status == 'total') { %><span class="label label-success smaller_text">Total</span> <%%}%>
-         <%% if (entity.payment_status == 'refunded') { %><span class="label label-danger smaller_text">Devuelto</span> <%%}%>
-      </td>       
       <td class="table-cell centered_text">
          <% if booking_item_family.multiple_items? %>
            <%% for (var idx=0;idx<entity.booking_lines.length;idx++) { %>
@@ -77,16 +69,18 @@
       </td>
       <td class="table-cell centered_text"><%%= self.formatDate(entity.date_from,'dd.MM.yyyy') %> </td>
       <td class="table-cell centered_text"><%%= self.formatDate(entity.date_to,'dd.MM.yyyy') %> </td>
-      <td class="table-cell centered_text"><%%= entity.created_by_manager ? '' : '<i class="fa fa-times"></i>' %>
-      <!--td class="table-cell centered_text">
-         <%% if (entity.customer_req_notification_sent) { %><span class="element-status pending-status smaller_text">c1</span> <%% } %>
-         <%% if (entity.customer_notification_sent) { %><span class="element-status confirmed-status smaller_text">c2</span> <%%}%>
-         <%% if (entity.customer_req_notification_p_sent) { %><span class="element-status confirmed-status smaller_text">c3</span> <%%}%>
-         <%% if (entity.customer_payment_enabled_sent) { %><span class="element-status confirmed-status smaller_text">c4</span> <%%}%>                  
-         <%% if (entity.manager_notification_sent) { %><span class="element-status confirmed-status smaller_text">m</span><%%}%>
-         <%% if (entity.manager_notification_p_n_sent) { %><span class="element-status confirmed-status smaller_text">m2</span><%%}%>
-         <%% if (entity.manager_confirm_notification_sent) { %><span class="element-status confirmed-status smaller_text">m3</span><%%}%>         
-      </td-->
+      <td class="table-cell centered_text">
+        <span class="<%%=self.model.entityHooks[0].statusClass(entity)%> element-status">
+          <%%= self.model.entityHooks[0].statusDescription[entity.status] %>
+        </span>
+      </td>
+      <td class="table-cell centered_text">
+         <%% if (entity.payment_status == 'deposit') { %><span class="label label-info smaller_text">Depósito</span> <%% } %>
+         <%% if (entity.payment_status == 'total') { %><span class="label label-success smaller_text">Total</span> <%%}%>
+         <%% if (entity.payment_status == 'refunded') { %><span class="label label-danger smaller_text">Devuelto</span> <%%}%>
+      </td>
+      <td class="table-cell centered_text"><%%= self.formatDate(entity.creation_date,'dd.MM.yyyy') %></td>
+      <td class="table-cell centered_text"><%%= entity.created_by_manager ? '<i class="fa fa-times"></i>' : '<i class="fa fa-check"></i>' %>
       <% if multiple_rental_locations %>
       <td class="table-cell"><%%= entity.rental_location_code %></td>
       <% end %>
@@ -260,28 +254,28 @@
 
 <script type="text/tmpl" id="linked_bookings_script">
 
-                     <table class="table">
-                        <thead class="table-header">
-                          <tr>
-                            <th class="table-cell" scope="col" style="width:25%"><%=t.booking_management.form.id%></th>
-                            <th class="table-cell" scope="col" style="width:15%"><%=t.booking_management.form.date_from%>
-                            <th class="table-cell" scope="col" style="width:15%"><%=t.booking_management.form.date_to%>
-                            <th class="table-cell" scope="col" style="width:30%"><%=t.booking_management.form.customer_title%></th>
-                            <th class="table-cell" scope="col"></th>
-                          </tr>
-                        </thead>
-                        <tbody class="table-tbody">
-                          <%% for (var idx=0; idx < data.length ; idx++) { %>
-                            <tr class="table-row <%% if (data[idx].main_booking_id==null){%>more_contrast_text<%%}%>">
-                               <td class="table-cell centered_text"><a href="/admin/booking/bookings/<%%=data[idx].id%>" target="_blank"><%%=data[idx].id%></a></td>
-                               <td class="table-cell centered_text"><%%= self.formatDate(data[idx].date_from,'dd.MM.yyyy') %> </td>
-                               <td class="table-cell centered_text"><%%= self.formatDate(data[idx].date_to,'dd.MM.yyyy') %> </td>
-                               <td class="table-cell centered_text"><%%=data[idx].customer_name%> <%%=data[idx].customer_surname%></td>
-                               <td class="table-cell"><%%=data[idx].detail%></td>
-                            </tr>
-                          <%% } %>
-                        </tbody>
-                     </table>    
+     <table class="table">
+        <thead class="table-header">
+          <tr>
+            <th class="table-cell" scope="col" style="width:25%"><%=t.booking_management.form.id%></th>
+            <th class="table-cell" scope="col" style="width:15%"><%=t.booking_management.form.date_from%>
+            <th class="table-cell" scope="col" style="width:15%"><%=t.booking_management.form.date_to%>
+            <th class="table-cell" scope="col" style="width:30%"><%=t.booking_management.form.customer_title%></th>
+            <th class="table-cell" scope="col"></th>
+          </tr>
+        </thead>
+        <tbody class="table-tbody">
+          <%% for (var idx=0; idx < data.length ; idx++) { %>
+            <tr class="table-row <%% if (data[idx].main_booking_id==null){%>more_contrast_text<%%}%>">
+               <td class="table-cell centered_text"><a href="/admin/booking/bookings/<%%=data[idx].id%>" target="_blank"><%%=data[idx].id%></a></td>
+               <td class="table-cell centered_text"><%%= self.formatDate(data[idx].date_from,'dd.MM.yyyy') %> </td>
+               <td class="table-cell centered_text"><%%= self.formatDate(data[idx].date_to,'dd.MM.yyyy') %> </td>
+               <td class="table-cell centered_text"><%%=data[idx].customer_name%> <%%=data[idx].customer_surname%></td>
+               <td class="table-cell"><%%=data[idx].detail%></td>
+            </tr>
+          <%% } %>
+        </tbody>
+     </table>
 
 
 </script>
