--- a/views/report_finances_finished_reservations.erb
+++ b/views/report_finances_finished_reservations.erb
@@ -10,7 +10,7 @@
   }
 </style>
 <div class="top-navigation-bar">
-  <h2 class="entity-title">Listado finanzas reservas finalizadas</h2>
+  <h2 class="entity-title"><%=t.report_finances_finished_reservations.title%></h2>
   <div class="form-button" style="float: right">
     <a id="print_link" href="/admin/booking/reports/finances-finished-reservations-csv" target="_blank">Excel</a>
   </div>
